--- a/package.json
+++ b/package.json
@@ -1,15 +1,43 @@
 {
-  "name": "relax",
+  "name": "@aiszlab/relax",
   "version": "1.0.0",
-  "description": "hooks collection",
-  "main": "index.js",
+  "description": "react utils collection",
+  "type": "module",
+  "main": "./dist/main.mjs",
+  "types": "./typings",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "clean:build": "rm -rf dist && rm -rf typings",
+    "tsc": "tsc"
   },
+  "devDependencies": {
+    "@babel/core": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
+    "babel-loader": "^9.1.2",
+    "fork-ts-checker-webpack-plugin": "^8.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "^5.1.3",
+    "webpack": "^5.86.0",
+    "webpack-cli": "^5.1.4"
+  },
+  "peerDependencies": {
+    "react": "^18",
+    "react-dom": "^18"
+  },
+  "files": [
+    "dist/",
+    "typings/"
+  ],
   "keywords": [
-    "hooks",
     "react"
   ],
   "author": "tutu@fantufantu.com",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "rxjs": "^7.8.1"
+  }
 }
