feat: add debounce callback hooks

--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "@aiszlab/relax",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.2",
   "description": "react utils collection",
   "type": "module",
   "main": "./dist/main.mjs",
   "types": "./typings",
   "scripts": {
     "build": "webpack",
-    "clean:build": "rm -rf dist && rm -rf typings",
-    "tsc": "tsc"
+    "clean:build": "rm -rf dist && rm -rf typings"
+  },
+  "dependencies": {
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
@@ -37,7 +39,7 @@
   ],
   "author": "tutu@fantufantu.com",
   "license": "MIT",
-  "dependencies": {
-    "rxjs": "^7.8.1"
+  "publishConfig": {
+    "access": "public"
   }
 }
