--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "types": "./typings",
   "scripts": {
     "build": "webpack",
-    "clean:build": "rm -rf dist && rm -rf typings"
+    "clean:build": "rm -rf dist && rm -rf typings",
+    "prepatch": "npm version prepatch && npm publish --tag beta"
   },
   "dependencies": {
     "rxjs": "^7.8.1"
