--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "author": "tutu@fantufantu.com",
   "license": "MIT",
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   }
 }
