--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "./dist/main.mjs",
   "types": "./typings",
   "scripts": {
-    "build": "webpack",
+    "dev": "rollup -c -w",
+    "build": "rollup -c",
     "clean:build": "rm -rf dist && rm -rf typings",
     "prepatch": "npm run clean:build && npm run build && npm version prepatch && npm publish"
   },
@@ -17,23 +18,20 @@
     "@babel/core": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-typescript": "^11.1.1",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
-    "babel-loader": "^9.1.2",
-    "fork-ts-checker-webpack-plugin": "^8.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^5.1.3",
-    "webpack": "^5.86.0",
-    "webpack-cli": "^5.1.4"
+    "rollup": "^3.27.0",
+    "typescript": "^5.1.3"
   },
   "peerDependencies": {
     "react": "^18",
     "react-dom": "^18"
   },
   "files": [
-    "dist/",
-    "typings/"
+    "dist/"
   ],
   "keywords": [
     "react"
