--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.8-0",
   "description": "react utils collection",
   "type": "module",
-  "main": "./dist/main.mjs",
+  "main": "./dist/index.js",
   "scripts": {
     "dev": "rollup -c -w",
     "build": "rollup -c",
