--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aiszlab/relax",
-  "version": "1.0.9-0",
+  "version": "1.0.10",
   "description": "react utils collection",
   "type": "module",
   "main": "./dist/index.js",
