--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "rollup -c -w",
     "build": "rollup -c",
     "clean:build": "rm -rf dist && rm -rf typings",
-    "prepatch": "npm run clean:build && npm run build && npm version prepatch && npm publish"
+    "pub": "npm run clean:build && npm run build && npm publish"
   },
   "dependencies": {
     "rxjs": "^7.8.1"
