--- a/packages/relax/package.json
+++ b/packages/relax/package.json
@@ -11,6 +11,7 @@
     "pub": "npm run clean:build && npm run build && npm publish"
   },
   "dependencies": {
+    "react-is": "^18.2.0",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
@@ -22,6 +23,7 @@
     "@rollup/plugin-typescript": "^11.1.1",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
+    "@types/react-is": "^18.2.2",
     "rollup": "^3.27.0",
     "typescript": "^5.1.3"
   },
