--- a/packages/relax/package.json
+++ b/packages/relax/package.json
@@ -1,13 +1,16 @@
 {
   "name": "@aiszlab/relax",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "description": "react utils collection",
   "type": "module",
-  "main": "./dist/index.js",
   "exports": {
+    ".": {
+      "default": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
     "./dom": {
-      "types": "./dist/dom/index.d.ts",
-      "default": "./dist/dom/index.js"
+      "default": "./dist/dom/index.js",
+      "types": "./dist/dom/index.d.ts"
     }
   },
   "scripts": {
