--- a/packages/relax/package.json
+++ b/packages/relax/package.json
@@ -1,17 +1,11 @@
 {
   "name": "@aiszlab/relax",
-  "version": "1.1.10",
+  "version": "1.2.11-beta.4",
   "description": "react utils collection",
   "type": "module",
   "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "default": "./dist/index.js"
-    },
-    "./dom": {
-      "types": "./dist/dom/index.d.ts",
-      "default": "./dist/dom/index.js"
-    }
+    ".": "./dist/index.js",
+    "./dom": "./dist/dom/index.js"
   },
   "scripts": {
     "dev": "rollup -c -w",
