--- a/packages/relax/package.json
+++ b/packages/relax/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@aiszlab/relax",
-  "version": "1.2.11-beta.4",
+  "version": "1.2.11-beta.5",
   "description": "react utils collection",
   "type": "module",
   "exports": {
     ".": "./dist/index.js",
-    "./dom": "./dist/dom/index.js"
+    "./dom": "./dist/dom/index.js",
+    "./types": "./dist/types/index.d.ts"
   },
   "scripts": {
     "dev": "rollup -c -w",
