--- a/packages/relax/package.json
+++ b/packages/relax/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aiszlab/relax",
-  "version": "1.2.11-beta.9",
+  "version": "1.2.11",
   "description": "react utils collection",
   "type": "module",
   "exports": {
@@ -38,7 +38,8 @@
     "dist/"
   ],
   "keywords": [
-    "react"
+    "react",
+    "hooks"
   ],
   "author": "tutu@fantufantu.com",
   "license": "MIT",
