--- a/packages/relax/package.json
+++ b/packages/relax/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aiszlab/relax",
-  "version": "1.2.17-beta.1",
+  "version": "1.2.18",
   "description": "react utils collection",
   "type": "module",
   "exports": {
