--- a/packages/relax/package.json
+++ b/packages/relax/package.json
@@ -4,8 +4,14 @@
   "description": "react utils collection",
   "type": "module",
   "exports": {
-    ".": "./dist/index.mjs",
-    "./dom": "./dist/dom/index.mjs"
+    ".": {
+      "default": "./dist/index.mjs",
+      "types": "./dist/index.d.ts"
+    },
+    "./dom": {
+      "default": "./dist/dom/index.mjs",
+      "types": "./dist/dom/index.d.ts"
+    }
   },
   "scripts": {
     "dev": "rollup -c -w",
