chore: remove use less script

--- a/packages/relax/package.json
+++ b/packages/relax/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "dev": "rollup -c -w",
     "build": "rollup -c",
-    "clean:build": "rm -rf dist && rm -rf typings",
+    "clean:build": "rm -rf dist",
     "pub": "npm run clean:build && npm run build && npm publish"
   },
   "dependencies": {
