chore: add homepage

--- a/packages/relax/package.json
+++ b/packages/relax/package.json
@@ -53,5 +53,6 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
-  }
+  },
+  "homepage": "https://aisz.dev/hooks"
 }
