--- a/packages/relax/package.json
+++ b/packages/relax/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aiszlab/relax",
-  "version": "1.2.31",
+  "version": "1.2.32",
   "description": "react utils collection",
   "type": "module",
   "exports": {
@@ -27,15 +27,15 @@
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@babel/preset-env": "^7.24.0",
-    "@babel/preset-typescript": "^7.22.5",
+    "@babel/preset-typescript": "^7.24.1",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-node-resolve": "^15.1.0",
-    "@rollup/plugin-typescript": "^11.1.1",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-is": "^18",
     "rollup": "^4.13.0",
-    "typescript": "^5.4.2"
+    "typescript": "5.3.3"
   },
   "peerDependencies": {
     "react": "^18",
