--- a/packages/relax/package.json
+++ b/packages/relax/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@aiszlab/relax",
-  "version": "1.2.37",
+  "version": "1.2.38",
   "description": "react utils collection",
   "type": "module",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "default": "./dist/index.mjs"
+      "default": "./dist/index.js"
     },
     "./dom": {
       "types": "./dist/dom/index.d.ts",
-      "default": "./dist/dom/index.mjs"
+      "default": "./dist/dom/index.js"
     },
     "./types": "./dist/types/index.d.ts"
   },
