--- a/packages/relax/package.json
+++ b/packages/relax/package.json
@@ -18,7 +18,8 @@
     "dev": "rollup -c -w",
     "build": "rollup -c",
     "clean:build": "rm -rf dist",
-    "pub": "npm run clean:build && npm run build && npm publish"
+    "pub": "npm run clean:build && npm run build && npm publish",
+    "test": "jest"
   },
   "dependencies": {
     "react-is": "^18.2.0",
@@ -28,13 +29,15 @@
     "@babel/core": "^7.24.0",
     "@babel/preset-env": "^7.24.0",
     "@babel/preset-typescript": "^7.24.1",
-    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@types/jest": "^29.5.12",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-is": "^18",
-    "rollup": "^4.13.0",
+    "jest": "^29.7.0",
+    "rollup": "^4.17.2",
     "typescript": "5.3.3"
   },
   "peerDependencies": {
