--- a/packages/relax/package.json
+++ b/packages/relax/package.json
@@ -32,17 +32,21 @@
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@testing-library/react": "^15.0.7",
     "@types/jest": "^29.5.12",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-is": "^18",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "react": "18",
+    "react-dom": "18",
     "rollup": "^4.17.2",
     "typescript": "5.3.3"
   },
   "peerDependencies": {
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "18",
+    "react-dom": "18"
   },
   "files": [
     "dist/"
