--- a/packages/relax/tsconfig.json
+++ b/packages/relax/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "declarationDir": "./dist"
-  }
+    "outDir": "dist",
+    "rootDir": "src"
+  },
+  "include": ["src"]
 }
