feat: use pnpm & jest vars import

--- a/packages/relax/package.json
+++ b/packages/relax/package.json
@@ -29,11 +29,11 @@
     "@babel/core": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
+    "@jest/globals": "^29.7.0",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@rollup/plugin-typescript": "^11.1.6",
     "@testing-library/react": "^15.0.7",
-    "@types/jest": "^29.5.12",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-is": "^18",
