feat: add preinstall hook

--- a/packages/watchdog/package.json
+++ b/packages/watchdog/package.json
@@ -16,13 +16,12 @@
   "dependencies": {
     "@npmcli/package-json": "^5.2.0",
     "commander": "^12.1.0",
-    "cross-spawn": "^7.0.3",
     "semver": "^7.6.2"
   },
   "devDependencies": {
-    "@types/cross-spawn": "^6.0.6",
     "@types/node": "^20.14.9",
     "@types/npmcli__package-json": "^4.0.4",
+    "@types/semver": "^7.5.8",
     "typescript": "5.5.3"
   }
 }
