--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "engines": {
     "node": ">=18",
     "pnpm": ">=9"
+  },
+  "scripts": {
+    "preinstall": "npx @aiszlab/watchdog preinstall"
   }
 }
