--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -17,7 +17,7 @@ jobs:
           node-version: 20
       - run: npm i -g pnpm
       - run: pnpm i
-      - run: pnpm test
+      - run: pnpm run -r test
 
   publish-gpr:
     needs: test
