--- a/packages/fuzzy/package.json
+++ b/packages/fuzzy/package.json
@@ -3,9 +3,7 @@
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": ""
-  },
+  "scripts": {},
   "devDependencies": {
     "@types/react": "^18",
     "@types/react-dom": "^18"
