--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -31,6 +31,8 @@ jobs:
         with:
           node-version: 20
           registry-url: https://npm.pkg.github.com/
+      - run: npm i -g pnpm
+      - run: pnpm i
       - run: pnpm run -r build
       - run: cd packages/relax
       - run: npm publish
