--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -19,18 +19,15 @@ jobs:
       - run: pnpm i
       - run: pnpm run -r test
 
-  publish-gpr:
+  publish-npm:
     needs: test
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v3
         with:
           node-version: 20
-          registry-url: https://npm.pkg.github.com/
+          registry-url: https://registry.npmjs.org/
       - run: npm i -g pnpm
       - run: pnpm i
       - run: pnpm run -r build
