--- a/packages/relax/package.json
+++ b/packages/relax/package.json
@@ -22,11 +22,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/runtime": "^7.24.8",
     "react-is": "^18.2.0",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.9",
+    "@babel/plugin-transform-runtime": "^7.24.7",
     "@babel/preset-env": "^7.24.8",
     "@babel/preset-typescript": "^7.24.7",
     "@jest/globals": "^29.7.0",
