--- a/packages/relax/package.json
+++ b/packages/relax/package.json
@@ -30,6 +30,7 @@
     "@babel/core": "^7.24.9",
     "@babel/plugin-transform-runtime": "^7.24.7",
     "@babel/preset-env": "^7.24.8",
+    "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
     "@jest/globals": "^29.7.0",
     "@rollup/plugin-babel": "^6.0.4",
