--- a/packages/relax/package.json
+++ b/packages/relax/package.json
@@ -23,28 +23,28 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.25.0",
-    "react-is": "^18.2.0",
+    "react-is": "^18.3.1",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.9",
+    "@babel/core": "^7.25.2",
     "@babel/plugin-transform-runtime": "^7.24.7",
-    "@babel/preset-env": "^7.25.0",
+    "@babel/preset-env": "^7.25.3",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
     "@jest/globals": "^29.7.0",
     "@rollup/plugin-babel": "^6.0.4",
-    "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
     "@testing-library/react": "^16.0.0",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/react-is": "^18",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-is": "^18.3.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "react": "18",
-    "react-dom": "18",
-    "rollup": "^4.19.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "rollup": "^4.20.0",
     "typescript": "5.5.4"
   },
   "peerDependencies": {
