--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -14,9 +14,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 22
       - run: npm i -g pnpm
       - run: pnpm i
+      - run: pnpm run -r build
       - run: pnpm run -r test
 
   publish-npm:
@@ -26,8 +27,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
-          registry-url: https://registry.npmjs.org/
+          node-version: 22
       - run: npm i -g pnpm
       - run: pnpm i
       - run: pnpm run -r build
