--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -31,6 +31,6 @@ jobs:
       - run: npm i -g pnpm
       - run: pnpm i
       - run: pnpm run -r build
-      - run: cd packages/relax && npm publish
+      - run: pnpm -r publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
