--- a/packages/fuzzy/package.json
+++ b/packages/fuzzy/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@aiszlab/fuzzy",
   "version": "0.0.1",
+  "private": "true",
   "description": "",
   "main": "index.js",
   "scripts": {},
