--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -31,6 +31,10 @@ jobs:
       - run: npm i -g pnpm
       - run: pnpm i
       - run: pnpm run -r build
-      - run: pnpm -r publish --no-git-checks
+
+      - name: Set publishing config
+        run: pnpm config set '//registry.npmjs.org/:_authToken' '${NODE_AUTH_TOKEN}'
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+
+      - run: pnpm -r publish --no-git-checks --access public
