--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,5 @@
 # registry=https://registry.npmjs.org/
 registry=https://registry.npmmirror.com/
+
+# package in monorepo
+link-workspace-packages=true
