--- a/packages/wasp/package.json
+++ b/packages/wasp/package.json
@@ -1,13 +1,29 @@
 {
   "name": "@aiszlab/wasp",
   "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {},
-  "author": "tutu@fantufantu.com",
-  "license": "MIT",
+  "main": "dist/index.js",
+  "type": "module",
+  "scripts": {
+    "dev": "tsc -w",
+    "build": "tsc"
+  },
   "description": "",
   "dependencies": {
     "@vitejs/plugin-react": "^4.3.1",
+    "commander": "^12.1.0",
     "vite": "^5.4.2"
+  },
+  "files": [
+    "dist/"
+  ],
+  "author": "tutu@fantufantu.com",
+  "license": "MIT",
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
+  "homepage": "https://aisz.dev/hooks",
+  "devDependencies": {
+    "typescript": "5.5.4"
   }
 }
