--- a/packages/wasp/package.json
+++ b/packages/wasp/package.json
@@ -1,8 +1,10 @@
 {
   "name": "@aiszlab/wasp",
   "version": "1.0.0",
-  "main": "dist/index.js",
   "type": "module",
+  "bin": {
+    "wa": "./bin/index.js"
+  },
   "scripts": {
     "dev": "tsc -w",
     "build": "tsc"
@@ -13,8 +15,11 @@
     "commander": "^12.1.0",
     "vite": "^5.4.2"
   },
+  "devDependencies": {
+    "typescript": "5.5.4"
+  },
   "files": [
-    "dist/"
+    "bin/"
   ],
   "author": "tutu@fantufantu.com",
   "license": "MIT",
@@ -22,8 +27,5 @@
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
-  "homepage": "https://aisz.dev/hooks",
-  "devDependencies": {
-    "typescript": "5.5.4"
-  }
+  "homepage": "https://aisz.dev/hooks"
 }
