--- a/packages/wasp/package.json
+++ b/packages/wasp/package.json
@@ -7,7 +7,8 @@
   },
   "scripts": {
     "dev": "tsc -w",
-    "build": "tsc"
+    "build": "tsc",
+    "publish:npm": "npm publish"
   },
   "description": "",
   "dependencies": {
