--- a/packages/bee/package.json
+++ b/packages/bee/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aiszlab/bee",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "react app",
   "main": "./dist/index.js",
   "type": "module",
@@ -31,5 +31,9 @@
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "rollup": "^4.21.2"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   }
 }
