--- a/packages/wasp/package.json
+++ b/packages/wasp/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@aiszlab/wasp",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "type": "module",
   "bin": {
-    "wasp": "./bin/index.js"
+    "wasp": "bin/index.js"
   },
   "scripts": {
     "dev": "tsc -w",
@@ -27,6 +27,5 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
-  },
-  "homepage": "https://aisz.dev/hooks"
+  }
 }
