--- a/packages/bee/package.json
+++ b/packages/bee/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aiszlab/bee",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "react app",
   "main": "./dist/index.js",
   "type": "module",
@@ -32,6 +32,9 @@
     "@types/react-dom": "^18.3.0",
     "rollup": "^4.21.2"
   },
+  "files": [
+    "dist/"
+  ],
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
