--- a/packages/wasp/package.json
+++ b/packages/wasp/package.json
@@ -1,16 +1,19 @@
 {
   "name": "@aiszlab/wasp",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "type": "module",
   "bin": {
     "wasp": "bin/index.js"
+  },
+  "exports": {
+    "./env": "./types/env.d.ts"
   },
   "scripts": {
     "dev": "tsc -w",
     "build": "tsc",
     "publish:npm": "npm publish"
   },
-  "description": "",
+  "description": "shell for any build scripts",
   "dependencies": {
     "@vitejs/plugin-react": "^4.3.1",
     "commander": "^12.1.0",
