--- a/packages/bee/package.json
+++ b/packages/bee/package.json
@@ -1,9 +1,23 @@
 {
   "name": "@aiszlab/bee",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "description": "react app",
   "main": "./dist/index.js",
   "type": "module",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "./router": {
+      "types": "./dist/router.d.ts",
+      "default": "./dist/router.js"
+    },
+    "./storage": {
+      "types": "./dist/storage.d.ts",
+      "default": "./dist/storage.js"
+    }
+  },
   "scripts": {
     "dev": "rollup -c -w",
     "build": "rollup -c",
