--- a/packages/wasp/package.json
+++ b/packages/wasp/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@vitejs/plugin-react": "^4.3.1",
     "commander": "^12.1.0",
+    "tailwindcss": "^3.4.10",
     "vite": "^5.4.2"
   },
   "devDependencies": {
