--- a/packages/wasp/package.json
+++ b/packages/wasp/package.json
@@ -16,6 +16,7 @@
   "description": "shell for any build scripts",
   "dependencies": {
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
     "commander": "^12.1.0",
     "tailwindcss": "^3.4.10",
     "vite": "^5.4.2"
