--- a/packages/wasp/tsconfig.json
+++ b/packages/wasp/tsconfig.json
@@ -3,6 +3,7 @@
     "outDir": "bin",
     "rootDir": "src",
     "moduleResolution": "NodeNext",
-    "module": "NodeNext"
+    "module": "NodeNext",
+    "declaration": true
   }
 }
