--- a/packages/relax/package.json
+++ b/packages/relax/package.json
@@ -32,6 +32,7 @@
     "clean:build": "rm -rf dist",
     "prepublishOnly": "npm run clean:build && npm run build",
     "test": "jest",
+    "test:coverage": "jest --coverage",
     "publish:npm": "npm publish"
   },
   "dependencies": {
@@ -50,6 +51,7 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
     "@testing-library/react": "^16.0.1",
+    "@types/babel__core": "^7.20.5",
     "@types/react": "^18.3.6",
     "@types/react-dom": "^18.3.0",
     "@types/react-is": "^18.3.0",
