feat: fuzzy apis collect

--- a/packages/fuzzy/package.json
+++ b/packages/fuzzy/package.json
@@ -1,18 +1,50 @@
 {
   "name": "@aiszlab/fuzzy",
   "version": "1.3.17",
-  "private": "true",
-  "description": "",
-  "main": "index.js",
-  "scripts": {},
+  "description": "more more more apis(useless)",
+  "type": "module",
+  "./avatar": {
+    "types": "./dist/avatar/index.d.ts",
+    "node": "./dist/avatar/index.cjs",
+    "require": "./dist/avatar/index.cjs",
+    "import": "./dist/avatar/index.mjs",
+    "default": "./dist/avatar/index.mjs"
+  },
+  "./crypto": {
+    "types": "./dist/crypto/index.d.ts",
+    "node": "./dist/crypto/index.cjs",
+    "require": "./dist/crypto/index.cjs",
+    "import": "./dist/crypto/index.mjs",
+    "default": "./dist/crypto/index.mjs"
+  },
+  "scripts": {
+    "dev": "rollup -c -w",
+    "build": "rollup -c",
+    "clean:build": "rm -rf dist",
+    "prepublishOnly": "npm run clean:build && npm run build",
+    "publish:npm": "npm publish"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.25.6"
+  },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.25.4",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-typescript": "^7.24.7",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/react": "^18.3.10",
-    "@types/react-dom": "^18.3.0"
+    "@types/react-dom": "^18.3.0",
+    "rollup": "^4.22.5"
   },
-  "peerDependencies": {
-    "react": "^18",
-    "react-dom": "^18"
-  },
-  "author": "",
-  "license": "ISC"
+  "author": "tutu@fantufantu.com",
+  "license": "MIT",
+  "files": [
+    "dist/"
+  ],
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  }
 }
