--- a/packages/bee/package.json
+++ b/packages/bee/package.json
@@ -6,15 +6,24 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "default": "./dist/index.js"
+      "node": "./dist/index.cjs",
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.mjs",
+      "default": "./dist/index.mjs"
     },
     "./router": {
       "types": "./dist/router.d.ts",
-      "default": "./dist/router.js"
+      "node": "./dist/router.cjs",
+      "require": "./dist/router.cjs",
+      "import": "./dist/router.mjs",
+      "default": "./dist/router.mjs"
     },
     "./storage": {
       "types": "./dist/storage.d.ts",
-      "default": "./dist/storage.js"
+      "node": "./dist/storage.cjs",
+      "require": "./dist/storage.cjs",
+      "import": "./dist/storage.mjs",
+      "default": "./dist/storage.mjs"
     }
   },
   "scripts": {
@@ -25,7 +34,7 @@
   "author": "tutu@fantufantu.com",
   "license": "MIT",
   "dependencies": {
-    "@aiszlab/relax": "*",
+    "@aiszlab/relax": "workspace:*",
     "@babel/runtime": "^7.25.6",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
