--- a/packages/fuzzy/package.json
+++ b/packages/fuzzy/package.json
@@ -3,19 +3,12 @@
   "version": "1.3.17",
   "description": "more more more apis(useless)",
   "type": "module",
-  "./avatar": {
-    "types": "./dist/avatar/index.d.ts",
-    "node": "./dist/avatar/index.cjs",
-    "require": "./dist/avatar/index.cjs",
-    "import": "./dist/avatar/index.mjs",
-    "default": "./dist/avatar/index.mjs"
-  },
-  "./crypto": {
-    "types": "./dist/crypto/index.d.ts",
-    "node": "./dist/crypto/index.cjs",
-    "require": "./dist/crypto/index.cjs",
-    "import": "./dist/crypto/index.mjs",
-    "default": "./dist/crypto/index.mjs"
+  "./*": {
+    "types": "./dist/*/index.d.ts",
+    "node": "./dist/*/index.cjs",
+    "require": "./dist/*/index.cjs",
+    "import": "./dist/*/index.mjs",
+    "default": "./dist/*/index.mjs"
   },
   "scripts": {
     "dev": "rollup -c -w",
@@ -25,6 +18,7 @@
     "publish:npm": "npm publish"
   },
   "dependencies": {
+    "@aiszlab/relax": "workspace:*",
     "@babel/runtime": "^7.25.6"
   },
   "devDependencies": {
