--- a/packages/fuzzy/package.json
+++ b/packages/fuzzy/package.json
@@ -15,6 +15,8 @@
     "build": "rollup -c",
     "clean:build": "rm -rf dist",
     "prepublishOnly": "npm run clean:build && npm run build",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
     "publish:npm": "npm publish"
   },
   "dependencies": {
@@ -25,11 +27,13 @@
     "@babel/plugin-transform-runtime": "^7.25.4",
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-typescript": "^7.24.7",
+    "@jest/globals": "^29.7.0",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
+    "jest": "^29.7.0",
     "rollup": "^4.22.5"
   },
   "author": "tutu@fantufantu.com",
