--- a/packages/bee/package.json
+++ b/packages/bee/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aiszlab/bee",
-  "version": "1.3.18",
+  "version": "1.4.0",
   "description": "react app",
   "type": "module",
   "exports": {
@@ -34,7 +34,7 @@
   "author": "tutu@fantufantu.com",
   "license": "MIT",
   "dependencies": {
-    "@aiszlab/relax": "workspace:*",
+    "@aiszlab/relax": "*",
     "@babel/runtime": "^7.25.6",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
