--- a/packages/fuzzy/package.json
+++ b/packages/fuzzy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aiszlab/fuzzy",
-  "version": "1.3.18",
+  "version": "1.4.0",
   "description": "more more more apis(useless)",
   "type": "module",
   "./*": {
@@ -20,7 +20,7 @@
     "publish:npm": "npm publish"
   },
   "dependencies": {
-    "@aiszlab/relax": "workspace:*",
+    "@aiszlab/relax": "*",
     "@babel/runtime": "^7.25.6"
   },
   "devDependencies": {
