--- a/packages/fuzzy/package.json
+++ b/packages/fuzzy/package.json
@@ -1,14 +1,16 @@
 {
   "name": "@aiszlab/fuzzy",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "description": "more more more apis(useless)",
   "type": "module",
-  "./*": {
-    "types": "./dist/*/index.d.ts",
-    "node": "./dist/*/index.cjs",
-    "require": "./dist/*/index.cjs",
-    "import": "./dist/*/index.mjs",
-    "default": "./dist/*/index.mjs"
+  "exports": {
+    "./*": {
+      "types": "./dist/*/index.d.ts",
+      "node": "./dist/*/index.cjs",
+      "require": "./dist/*/index.cjs",
+      "import": "./dist/*/index.mjs",
+      "default": "./dist/*/index.mjs"
+    }
   },
   "scripts": {
     "dev": "rollup -c -w",
