--- a/packages/bee/package.json
+++ b/packages/bee/package.json
@@ -36,9 +36,7 @@
   "dependencies": {
     "@aiszlab/relax": "*",
     "@babel/runtime": "^7.25.6",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.2",
-    "redux": "^5.0.1"
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.25.4",
