--- a/packages/relax/package.json
+++ b/packages/relax/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aiszlab/relax",
-  "version": "1.5.3",
+  "version": "1.5.4",
   "description": "react utils collection",
   "exports": {
     ".": {
@@ -10,19 +10,12 @@
       "import": "./dist/index.mjs",
       "default": "./dist/index.mjs"
     },
-    "./dom": {
-      "types": "./dist/dom/index.d.ts",
-      "node": "./dist/dom/index.cjs",
-      "require": "./dist/dom/index.cjs",
-      "import": "./dist/dom/index.mjs",
-      "default": "./dist/dom/index.mjs"
-    },
-    "./react": {
-      "types": "./dist/react/index.d.ts",
-      "node": "./dist/react/index.cjs",
-      "require": "./dist/react/index.cjs",
-      "import": "./dist/react/index.mjs",
-      "default": "./dist/react/index.mjs"
+    "./*": {
+      "types": "./dist/*/index.d.ts",
+      "node": "./dist/*/index.cjs",
+      "require": "./dist/*/index.cjs",
+      "import": "./dist/*/index.mjs",
+      "default": "./dist/*/index.mjs"
     },
     "./types": "./dist/types/index.d.ts"
   },
@@ -59,7 +52,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "rollup": "^4.24.1",
+    "rollup": "^4.24.2",
     "typescript": "5.6.2"
   },
   "peerDependencies": {
