--- a/packages/wasp/package.json
+++ b/packages/wasp/package.json
@@ -10,7 +10,8 @@
     "./vite": {
       "default": "./bin/vite.js",
       "types": "./bin/vite.d.ts"
-    }
+    },
+    "./tailwind": "./plugins/tailwind.css"
   },
   "scripts": {
     "dev": "tsc -w",
@@ -19,18 +20,19 @@
   },
   "description": "shell for any build scripts",
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.6",
     "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.20",
     "commander": "^12.1.0",
-    "tailwindcss": "^3.4.16",
-    "vite": "^5.4.10"
+    "tailwindcss": "^4.0.6",
+    "vite": "^5.4.14"
   },
   "devDependencies": {
     "typescript": "5.7.3"
   },
   "files": [
     "bin/",
-    "types/"
+    "types/",
+    "plugins/"
   ],
   "author": "tutu@fantufantu.com",
   "license": "MIT",
