--- a/packages/bee/package.json
+++ b/packages/bee/package.json
@@ -29,7 +29,7 @@
   "dependencies": {
     "@aiszlab/relax": "*",
     "@babel/runtime": "^7.26.0",
-    "react-router-dom": "^7.1.5"
+    "react-router": "^7.2.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.25.9",
