--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -33,6 +33,6 @@ jobs:
       - run: npm i -g pnpm
       - run: pnpm i
       - run: pnpm run -r build
-      - run: pnpm run -r publish:npm
+      - run: pnpm run -r publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
