--- a/packages/bee/package.json
+++ b/packages/bee/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aiszlab/bee",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "react app",
   "type": "module",
   "exports": {
@@ -21,8 +21,7 @@
   },
   "scripts": {
     "dev": "rollup -c -w",
-    "build": "rollup -c",
-    "publish:npm": "npm publish"
+    "build": "rollup -c"
   },
   "author": "tutu@fantufantu.com",
   "license": "MIT",
