--- a/packages/fuzzy/package.json
+++ b/packages/fuzzy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aiszlab/fuzzy",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "more more more apis(useless)",
   "type": "module",
   "exports": {
@@ -18,8 +18,7 @@
     "clean:build": "rm -rf dist",
     "prepublishOnly": "npm run clean:build && npm run build",
     "test": "jest",
-    "test:coverage": "jest --coverage",
-    "publish:npm": "npm publish"
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@aiszlab/relax": "workspace:^",
