--- a/packages/relax/package.json
+++ b/packages/relax/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aiszlab/relax",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "react utils collection",
   "exports": {
     ".": {
@@ -25,8 +25,7 @@
     "clean:build": "rm -rf dist",
     "prepublishOnly": "npm run clean:build && npm run build",
     "test": "jest",
-    "test:coverage": "jest --coverage",
-    "publish:npm": "npm publish"
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@babel/runtime": "^7.26.9",
