chore: update peerDependencies for react and react-dom to allow any version >=18

--- a/packages/bee/package.json
+++ b/packages/bee/package.json
@@ -45,8 +45,8 @@
     "rollup": "^4.34.8"
   },
   "peerDependencies": {
-    "react": "18",
-    "react-dom": "18"
+    "react": ">=18",
+    "react-dom": ">=18"
   },
   "files": [
     "dist/"
