--- a/packages/relax/package.json
+++ b/packages/relax/package.json
@@ -55,8 +55,8 @@
     "typescript": "5.7.3"
   },
   "peerDependencies": {
-    "react": "18",
-    "react-dom": "18"
+    "react": ">=18",
+    "react-dom": ">=18"
   },
   "files": [
     "dist/"
