--- a/packages/relax/package.json
+++ b/packages/relax/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aiszlab/relax",
-  "version": "2.0.5",
+  "version": "2.0.6-beta.0",
   "description": "react utils collection",
   "exports": {
     ".": {
