--- a/packages/fuzzy/package.json
+++ b/packages/fuzzy/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "dev": "rollup -c -w",
     "build": "rollup -c",
-    "clean:build": "rm -rf dist",
+    "clean:build": "z rm dist",
     "prepublishOnly": "npm run clean:build && npm run build",
     "test": "jest",
     "test:coverage": "jest --coverage"
@@ -32,10 +32,10 @@
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-typescript": "^12.1.2",
-    "@types/react": "^19.1.3",
-    "@types/react-dom": "^19.1.3",
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.5",
     "jest": "^29.7.0",
-    "rollup": "^4.40.2"
+    "rollup": "^4.41.0"
   },
   "author": "tutu@fantufantu.com",
   "license": "MIT",
