--- a/packages/relax/package.json
+++ b/packages/relax/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "dev": "rollup -c -w",
     "build": "rollup -c",
-    "clean:build": "rm -rf dist",
+    "clean:build": "z rm dist",
     "prepublishOnly": "npm run clean:build && npm run build",
     "test": "jest",
     "test:coverage": "jest --coverage"
@@ -44,14 +44,14 @@
     "@rollup/plugin-typescript": "^12.1.2",
     "@testing-library/react": "^16.3.0",
     "@types/babel__core": "^7.20.5",
-    "@types/react": "^19.1.3",
-    "@types/react-dom": "^19.1.3",
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.5",
     "@types/react-is": "^19.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "rollup": "^4.40.2",
+    "rollup": "^4.41.0",
     "typescript": "5.8.3"
   },
   "peerDependencies": {
