--- a/packages/relax/package.json
+++ b/packages/relax/package.json
@@ -49,6 +49,7 @@
     "@types/react-is": "^19.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "next": "^15.3.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "rollup": "^4.41.0",
