--- a/packages/bee/package.json
+++ b/packages/bee/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aiszlab/bee",
-  "version": "2.0.6-beta.7",
+  "version": "2.0.6",
   "description": "aiszlab csr app",
   "type": "module",
   "exports": {
