``` feat(relax): 发布新版本 2.0.8-beta.0
新增 `ValueOf` 类型工具，用于统一获取数组、对象、Set、Map 等数据结构的值类型。
该类型工具支持更灵活的泛型推导，提升类型安全性与复用性。
```

--- a/packages/relax/package.json
+++ b/packages/relax/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aiszlab/relax",
-  "version": "2.0.7",
+  "version": "2.0.8-beta.0",
   "description": "react utils collection",
   "exports": {
     ".": {
