--- a/packages/relax/package.json
+++ b/packages/relax/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aiszlab/relax",
-  "version": "2.1.1",
+  "version": "2.1.2-beta.1",
   "description": "react utils collection",
   "exports": {
     ".": {
